2010-03-05  vadim  <vadim@vk.crocodile.org>

	* instDialog_ui_ops.cpp (instDialog::fillCompileSelectList):
	fixed #1305 "Compilation of cluster firewall". when user tries to
	compile a firewall object that is also a cluster member, but did
	not request compilation of the cluster, a warning should be
	presented.

	* fixed #1303 "Improve design of the global Preferences, tab
	Objects"

2010-03-04  vadim  <vadim@vk.crocodile.org>

	* pfAdvancedDialog.cpp (pfAdvancedDialog::doScrubToggled):
	fixed #1297 "change in scrub rules in PF 4.6". PF 4.6 stopped
	support for several reassemble options except for "reassemble tcp"
	and changed format for the "scrub" rules.

	* PolicyCompiler_cisco_acls.cpp (setInterfaceAndDirectionBySrc::processNext):
	recognize multicast when matching Network and NetworkIPv6
	objects. Fixes #1298

	* ObjectManipulator.cpp (ObjectManipulator::getDeleteMenuState):
	fixed #1301 "can not delete Policy object when it is in Deleted
	Objects lib". SF bug 2962628

2010-03-03  glitch.vk.crocodile.org  <vadim@vk.crocodile.org>

	* CompilerDriver_pix_run.cpp (CompilerDriver_pix::run): 
	fixed #1296 "crash in fwb_pix". Compiler used to create copy of
	each network zone object, expanded it recursively and added
	network and address objects to the newly created group
	directly (rather than via references). This created objects that
	were referenced by two parents in the tree which caused crash in
	FWObject::destroyChildren() because an attempt to free the same
	block of memory twice.

2010-03-03  vadim  <vadim@vk.crocodile.org>

	* compiler_lib/CompilerDriver.cpp (CompilerDriver::commonChecks2):
	fixed #1292  Added check for interfaces with valid address and
	netmask 0.0.0.0

2010-03-03  glitch.vk.crocodile.org  <vadim@vk.crocodile.org>

	* iptables.g (port_def_with_incomplete_range): fixed #1294
	'importer for iptables does not parse "--dport NNNN:"'. Policy
	importer for iptables should recognize the following variant of